force-app/main/default/objects/FundingBaseline__c/fields/No_of_Homes_which_will_not_reach_EPC_C__c.field-meta.xml
<CustomField>
    <fullName>No_of_Homes_which_will_not_reach_EPC_C__c</fullName>
    <description>No of Homes which will not reach EPC C or above</description>
    <inlineHelpText>No of Homes which will not reach EPC C or above</inlineHelpText>
    <label>No. of Homes which will not reach EPC C</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>