force-app/main/default/objects/FundingBaseline__c/fields/Non_Social_homes_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Non_Social_homes_Percentage__c</fullName>
    <formula>Starting_No_of_Non_Social_Homes__c / Total_Homes_to_be_Upgraded__c</formula>
    <label>Non-Social Homes %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>