force-app/main/default/objects/FundingBaseline__c/fields/OOEP_Grant_Total__c.field-meta.xml
<CustomField>
    <fullName>OOEP_Grant_Total__c</fullName>
    <inlineHelpText>Owner Occupied Energy Performance Grant Total of Approved Batches</inlineHelpText>
    <label>OOEP Grant Total</label>
    <summarizedField>FundingBatch__c.OOEP_Grant_Total__c</summarizedField>
    <summaryFilterItems>
        <field>FundingBatch__c.ABS_Status__c</field>
        <operation>equals</operation>
        <value>Approved, Closed</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>FundingBatch__c.Version_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>FundingBatch__c.Active_Baseline__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>