force-app/main/default/objects/FundingBaseline__c/fields/Parent_Baseline__c.field-meta.xml
<CustomField>
    <fullName>Parent_Baseline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent  Baseline</label>
    <referenceTo>FundingBaseline__c</referenceTo>
    <relationshipLabel>Baselines</relationshipLabel>
    <relationshipName>Funding_Baselines</relationshipName>
    <type>Lookup</type>
</CustomField>