force-app/main/default/objects/FundingBaseline__c/fields/Parent_Time_Period__c.field-meta.xml
<CustomField>
    <fullName>Parent_Time_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Time Period</label>
    <referenceTo>Time_Period__c</referenceTo>
    <relationshipLabel>Baselines</relationshipLabel>
    <relationshipName>Baselines</relationshipName>
    <type>Lookup</type>
</CustomField>