force-app/main/default/objects/FundingBaseline__c/fields/Phase_Grant_A_A_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Phase_Grant_A_A_Percentage__c</fullName>
    <formula>Baseline_Grant_A_A_Spend__c /   Baseline_Total_Grant_Spend__c</formula>
    <label>Phase Grant A&amp;A %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>