force-app/main/default/objects/FundingBaseline__c/fields/Phase_Total_A_A_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Phase_Total_A_A_Percentage__c</fullName>
    <formula>(Baseline_Grant_A_A_Spend__c + Baseline_Co_funding_A_A_spend__c) /  Baseline_Total_Spend__c</formula>
    <label>Phase Total A&amp;A %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>