force-app/main/default/objects/FundingBaseline__c/fields/PR100LCH_House_Count__c.field-meta.xml
<CustomField>
    <fullName>PR100LCH_House_Count__c</fullName>
    <inlineHelpText>Private Rented 100% funded Low Carbon Heat House Count of all approved batches</inlineHelpText>
    <label>PR100LCH House Count</label>
    <summarizedField>FundingBatch__c.PR100LCH_House_Count__c</summarizedField>
    <summaryFilterItems>
        <field>FundingBatch__c.ABS_Status__c</field>
        <operation>equals</operation>
        <value>Approved, Closed</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>FundingBatch__c.Version_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>FundingBatch__c.Active_Baseline__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>