force-app/main/default/objects/FundingBaseline__c/fields/Previous_Baseline__c.field-meta.xml
<CustomField>
    <fullName>Previous_Baseline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Baseline</label>
    <referenceTo>FundingBaseline__c</referenceTo>
    <relationshipLabel>Baselines (Previous Baseline)</relationshipLabel>
    <relationshipName>Baselines</relationshipName>
    <type>Lookup</type>
</CustomField>