force-app/main/default/objects/FundingBaseline__c/fields/Procurement_Activity_Completed__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Activity_Completed__c</fullName>
    <label>Procurement Activity Completed (MS)</label>
    <type>Date</type>
</CustomField>