force-app/main/default/objects/FundingBaseline__c/fields/Procurement_Timelines_Provided__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Timelines_Provided__c</fullName>
    <label>Procurement Timelines Provided (MS)</label>
    <type>Date</type>
</CustomField>