force-app/main/default/objects/FundingBaseline__c/fields/Project_Team_Established_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Team_Established_Date__c</fullName>
    <label>Project Team Established (MS)</label>
    <type>Date</type>
</CustomField>