force-app/main/default/objects/FundingBaseline__c/fields/SP_Baseline_Grant_Spend__c.field-meta.xml
<CustomField>
    <fullName>SP_Baseline_Grant_Spend__c</fullName>
    <label>SP Baseline Grant Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>