force-app/main/default/objects/FundingBaseline__c/fields/Starting_No_of_Non_Social_Homes__c.field-meta.xml
<CustomField>
    <fullName>Starting_No_of_Non_Social_Homes__c</fullName>
    <description>Starting No. of Non-Social Homes</description>
    <inlineHelpText>Starting No. of Non-Social Homes</inlineHelpText>
    <label>Starting No. of Non-Social Homes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>