force-app/main/default/objects/FundingBaseline__c/fields/Starting_No_of_Social_Homes_EPC_C_A__c.field-meta.xml
<CustomField>
    <fullName>Starting_No_of_Social_Homes_EPC_C_A__c</fullName>
    <description>Starting No. of Social Homes EPC C-A</description>
    <inlineHelpText>Starting No. of Social Homes EPC C-A</inlineHelpText>
    <label>Starting No. of Social Homes EPC C-A</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>