force-app/main/default/objects/FundingBaseline__c/fields/Starting_No_of_Social_Homes_EPC_G_D__c.field-meta.xml
<CustomField>
    <fullName>Starting_No_of_Social_Homes_EPC_G_D__c</fullName>
    <description>Starting No. of Social Homes EPC G-D</description>
    <inlineHelpText>Starting No. of Social Homes EPC G-D</inlineHelpText>
    <label>Starting No. of Social Homes EPC G-D</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>