force-app/main/default/objects/FundingBaseline__c/fields/Time_Period_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Time_Period_Sequence__c</fullName>
    <formula>Parent_Time_Period__r.Time_Period_Sequence_Number__c</formula>
    <label>Time Period Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>