force-app/main/default/objects/FundingBaseline__c/fields/Total_Baseline_Measures__c.field-meta.xml
<CustomField>
    <fullName>Total_Baseline_Measures__c</fullName>
    <label>Total Baseline Measures</label>
    <summarizedField>BaselineMeasureDetail__c.Measure_KPI_Number__c</summarizedField>
    <summaryForeignKey>BaselineMeasureDetail__c.Funding_Baseline__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>