force-app/main/default/objects/FundingBaseline__c/fields/Total_Capital_Already_Spent_Upfront__c.field-meta.xml
<CustomField>
    <fullName>Total_Capital_Already_Spent_Upfront__c</fullName>
    <label>Total Capital Already Spent Upfront</label>
    <summarizedField>FundingBatch__c.Paid_Total_to_Date_inc_current_Batch__c</summarizedField>
    <summaryFilterItems>
        <field>FundingBatch__c.ABS_Status__c</field>
        <operation>equals</operation>
        <value>Approved, Closed</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>FundingBatch__c.Version_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>FundingBatch__c.Active_Baseline__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>