force-app/main/default/objects/FundingBaseline__c/fields/Total_Fossil_Fuel_Off_Gas__c.field-meta.xml
<CustomField>
    <fullName>Total_Fossil_Fuel_Off_Gas__c</fullName>
    <label>Total Fossil Fuel Off-Gas</label>
    <summarizedField>FundingBatch__c.Total_Fossil_Fuel_Off_Gas__c</summarizedField>
    <summaryFilterItems>
        <field>FundingBatch__c.ABS_Status__c</field>
        <operation>equals</operation>
        <value>Submitted, Pre-Approved, Approved, Closed</value>
    </summaryFilterItems>
    <summaryForeignKey>FundingBatch__c.Active_Baseline__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>