force-app/main/default/objects/FundingBaseline__c/fields/Total_House_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_House_Count__c</fullName>
    <formula>OOEP_House_Count__c + OOLCH_House_Count__c + PR100EP_House_Count__c + PR100LCH_House_Count__c + PR50EP_House_Count__c + PR50LCH_House_Count__c + SHEP_House_Count__c + SHLCH_House_Count__c</formula>
    <label>Total House Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>