force-app/main/default/objects/FundingBaseline__c/fields/Total_Upfront_Payment_A_A_Capital__c.field-meta.xml
<CustomField>
    <fullName>Total_Upfront_Payment_A_A_Capital__c</fullName>
    <description>A&amp;A Upfront + Capital Upfront</description>
    <formula>AA_Upfront_15__c +  Capital_Upfront_5__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A&amp;A Upfront + Capital Upfront</inlineHelpText>
    <label>Total Upfront Payment (A&amp;A + Capital)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>