force-app/main/default/objects/FundingBaseline__c/fields/Totals_Committed__c.field-meta.xml
<CustomField>
    <fullName>Totals_Committed__c</fullName>
    <formula>Homes_Completed__c +  Homes_awaiting_Approval__c + Homes_Approved__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Totals Committed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>