force-app/main/default/objects/FundingBaseline__c/fields/Upfront_Capital_Awarded__c.field-meta.xml
<CustomField>
    <fullName>Upfront_Capital_Awarded__c</fullName>
    <description>Allows recording of payments allocated at start of baseline rather through draw down</description>
    <label>Upfront Capital Awarded</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>