force-app/main/default/objects/FundingBaseline__c/listViews/My_Baselines.listView-meta.xml
<ListView>
    <fullName>My_Baselines</fullName>
    <columns>NAME</columns>
    <columns>Funding_Award__c</columns>
    <columns>Baseline_Version__c</columns>
    <columns>Parent_Time_Period__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>My Baselines</label>
</ListView>