force-app/main/default/objects/FundingBaseline__c/listViews/SHDF_CF_Baselines.listView-meta.xml
<ListView>
    <fullName>SHDF_CF_Baselines</fullName>
    <columns>NAME</columns>
    <columns>Funding_Award__c</columns>
    <columns>Baseline_Version__c</columns>
    <columns>Parent_Time_Period__c</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Approved_Date__c</columns>
    <columns>Baseline_Start_Date__c</columns>
    <columns>Baseline_End_Date__c</columns>
    <columns>DAC_Successful__c</columns>
    <columns>Mid_Mobilisation_Review_Successful__c</columns>
    <columns>Procurement_Activity_Completed__c</columns>
    <columns>Procurement_Timelines_Provided__c</columns>
    <columns>Project_Team_Established_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Baseline_Type__c</field>
        <operation>equals</operation>
        <value>Phase,Award</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>FundingBaseline__c.SHF_Challenge_Fund</value>
    </filters>
    <label>SHDF CF Baselines</label>
</ListView>